add meta tags to index html

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,28 @@
     <title>Mymovie</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Browse the latest movies, top-rated films,
+    and trending TV shows. Discover new releases, watch trailers, and explore
+    film details."
+    />
+    <meta
+      name="keywords"
+      content="Movies, Films, Trailers,
+    New Releases, Top Rated, Popular Movies, Cinema, Streaming"
+    />
+    <meta
+      property="og:title"
+      content="Movies Hub - Latest & Top-Rated
+    Films"
+    />
+    <meta
+      property="og:description"
+      content="Explore our collection of movies,
+    watch trailers, read summaries, and stay updated with the latest releases."
+    />
+    <meta property="og:image" content="assets/images/logo.png" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://image.tmdb.org" />
     <link
