solve seo problems

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
+      name="google-site-verification"
+      content="totE_cZyzMAPsSk-Gmu216yOS7BJwavpU_-iaKQOzrM"
+    />
+    <meta
       name="description"
       content="Browse the latest movies, top-rated films,
     and trending TV shows. Discover new releases, watch trailers, and explore
